# orion

./: Cargo.toml  LICENSE  README.md
crates/interpreter/: Cargo.toml
crates/interpreter/src/: encodings.rs  environment.rs  interpreter.rs  (+3 more)
crates/orion_interpreter/: Cargo.toml
crates/orion_interpreter/src/: environment.rs  interpreter.rs  lib.rs  registers.rs
crates/orion_interpreter/src/instructions/: arithmetical.rs  branching.rs  data_transfer.rs  logical.rs  manipulation.rs  mod.rs
crates/orion_lexer/: Cargo.toml
crates/orion_parser/: Cargo.toml
crates/orion_types/: Cargo.toml
crates/types/: Cargo.toml
interpreter/: Cargo.toml
interpreter/src/: environment.rs  interpreter.rs  lib.rs  registers.rs
lexer/: Cargo.toml
lexer/src/: flags.rs  instruction.rs  lexer.rs  lib.rs  register.rs  token.rs
lexer/tests/: examples.rs  file_examples.rs
output/parser/: even_numbers_in_array.txt  min_num_in_n_array.txt  num_zeros_in_byte.txt  occurrences_of_num.txt  ones_complement.txt  pos_or_neg.txt  sum_of_array.txt
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  nodes.rs  parser.rs
test_files/: add_two_bytes.asm  even_numbers_in_array.asm  min_num_in_n_array.asm  num_zeros_in_byte.asm  occurrences_of_num.asm  ones_complement.asm  pos_or_neg.asm  twos_complement.asm
test_files/parser_output/: add_two_bytes.txt  even_numbers_in_array.txt  max_array_value.txt  min_num_in_n_array.txt  num_zeros_in_byte.txt  ones_complement.txt  pos_or_neg.txt  sum_of_array.txt  twos_complement.txt
types/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+33 files in other folders)
